time/tests/integration/compile-fail/invalid_time.stderr
error: invalid component: hour was 24
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(24:00);
  |                   ^^

error: invalid component: minute was 60
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0:60);
  |                     ^^

error: invalid component: second was 60
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0:00:60);
  |                        ^^

error: unexpected token: x
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(x);
  |                   ^

error: unexpected token: x
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0:00:00 x);
  |                           ^

error: invalid component: hour was ""
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!("");
  |                   ^^

error: unexpected end of input
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0:);
  |             ^^^^^^^^^
  |
  = note: this error originates in the macro `time` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: ,
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0,);
  |                    ^

error: invalid component: second was 0a
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0:00:0a);
  |                        ^^

error: invalid component: hour was 0
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0:00 pm);
  |                   ^^^^^^^

error: unexpected end of input
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0);
  |             ^^^^^^^^
  |
  = note: this error originates in the macro `time` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid component: hour was 0
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(0 pm);
  |                   ^^^^

error: unexpected token: :
 --> $WORKSPACE/tests/compile-fail/invalid_time.rs
  |
  |     let _ = time!(1 am :);
  |                        ^
